# economics-of-water-scarcity-replication

./: .gitignore  LICENSE.txt  README.md  data_hash_report.csv  run_paper_replication_mac.do
Reproducibility Package/: paper_order_replication.tex
Reproducibility Package/Codes/: Figure6_OECD.do  Format_UNIDO.do  Graph1_example.do  ISIC_labels.do  List_countries_aquastat_WB.do  Main_WaterScarcity_FMM_2025.do  Main_WaterScarcity_FMM_2025_mac.do  Main_WaterScarcity_FMM_2025_mac_formatting.do  Paper_assemble_outputs.do  QR_Regressions_growth_investment.do  Regressions_PWT.do  Regressions_Water_pricing.do  UNIDO_labels.do  (+17 more)
docs/: mac_stata_setup.md
python_replication/: README.md  pyproject.toml
python_replication/tests/: test_cli.py  test_oracle.py  test_registry.py  test_verification_parsers.py  test_verification_reference.py  test_verify.py
python_replication/water_scarcity/: __init__.py  config.py  oracle.py  run.py  verify.py
python_replication/water_scarcity/stages/: __init__.py  base.py  format_aquastat.py  format_pwt.py  format_unido.py  format_wb.py  format_wb2.py  graph1_example.py  list_countries_aquastat_wb.py  qr_regressions_growth_investment.py  regressions_eletricity.py  regressions_growth_investment_water.py  regressions_pwt.py  regressions_water_pricing.py  summary_aquastat_wb_stats.py  water_analysis_aquastat.py  water_analysis_more_regressions.py  water_analysis_new.py  water_demand_pop_gdppc.py  water_unido.py
python_replication/water_scarcity/verification/: __init__.py  checks.py  collect.py  parsers.py  reference.py  report.py  types.py
(+44 files in other folders)
